# algorithm2

./: BBB.cpp  CMakeLists.txt  DDD.cpp  EEE.cpp  Euler.cpp  FFF.cpp  FHQ.cpp  LLL.cpp  Legendre.cpp  P1.cpp  P1141.cpp  README.md  Template.cpp  Test.cpp  Test2.cpp  Test4.cpp  Test5.cpp  aaa.cpp  back_up.cpp  cal.cpp  ccc.cpp  clear_in.cpp  gen.cpp  ggg.cpp  hhhh.cpp  in.txt  line_tree.cpp  love.cpp  main.cpp  mid_pre.cpp  out  rand_gen.cpp  上机实践课-图的遍历操作 - 学生使用2023.docx
2022141530052+林宸/: Test3.cpp  Test4.cpp  上机实践课-图的遍历操作 - 学生使用2023.docx
reserve/: C++编译过程.txt  Pollard_Rho(N^0.25把N素因子分解).cpp  Rabin_rng(logN判断N是否为质数).cpp  Splay定点插入+中序遍历输出.cpp  tarjan求割边.cpp  中国剩余定理.cpp  二分.cpp  二维线段树动态开点(陌上花开).cpp  区间加+区间和查询线段树.cpp  区间加+区间查最大线段树.cpp  区间加+区间赋值+区间查最大线段树.cpp  区间加,乘,除(须保证整除)线段树.cpp  单串后缀自动机.cpp  可持久化线段树.cpp  图论相关  奇妙的文件.cpp  扩展KMP匹配多个子串位置.cpp  扩展欧拉exgcd带防溢出.cpp  数论相关.txt  最大流最小割Dinic.cpp  权值线段树例题CF1928F.cpp  素数线性筛.cpp  线段树套可持久化线段树查询区域内不超过指定数的元素和.cpp  线段树扫描线+程序计时.cpp  线段树相关.txt  线段树稳定模板(区加,乘,赋)(区和,平方和,立方和).cpp  线段树线性操作矩阵懒标记(牛客练习赛134-F).cpp  线段树超级模板(区加,乘,赋)(区和,平方和,立方和,带取模,区最大,区最小).cpp  线段树超级模板double版(P1471方差).cpp  组合数带模计算.cpp  自动取模类.cpp  读入与输出__int128.cpp  重链剖分求LCA+双排序建虚树dp.cpp
reserve/C++语言特性方面/: BigInteger.cpp  lambda与线程.cpp  关于宏打印与原始字符串打印.cpp  展现底层二进制码.cpp  流运算符号重载.cpp  结构体生成函数简写.cpp  计算机指令
reserve/a快速API函数/: C++pbds库+自带红黑树.cpp  Min_25筛(洛谷模板题).cpp  PN筛.cpp  ntt多项式相关.cpp  tarjan类.cpp  任意模数MTT实现多项式乘法(可能有bug).cpp  吉司机线段树(Segment Beats)(P10639).cpp  后缀自动机SAM(P1368循环移位最小串).cpp  哈希与集合.cpp  多项式全家桶.cpp  差分约束.cpp  数论类.cpp  最小费用最大流+动态加边(abc407-G).cpp  杜教筛.cpp  树上点分治例题(河北省赛-B).cpp  (+4 more)
(+42 files in other folders)
