cmake_minimum_required(VERSION 3.25)
project(algorithm2)

set(CMAKE_CXX_STANDARD 20)

add_executable(algorithm2 main.cpp)
add_executable(GG GG.cpp)
add_executable(Test Test.cpp)
add_executable(P1 P1.cpp)
add_executable(P1141 P1141.cpp)
add_executable(cal cal.cpp)
add_executable(FHQ FHQ.cpp)
add_executable(Test2 Test2.cpp)
add_executable(Test3 Test3.cpp)
add_executable(love love.cpp)
add_executable(line_tree line_tree.cpp)
add_executable(Legendre Legendre.cpp)
add_executable(mid_pre mid_pre.cpp)
add_executable(gen gen.cpp)
add_executable(Test4 Test4.cpp)
add_executable(Test5 Test5.cpp)
add_executable(aaa aaa.cpp)
add_executable(hhhh hhhh.cpp)
add_executable(ggg ggg.cpp)
add_executable(ccc ccc.cpp)
add_executable(LLL LLL.cpp)
add_executable(DDD DDD.cpp)
add_executable(BBB BBB.cpp)
add_executable(Euler Euler.cpp)
add_executable(rand_gen rand_gen.cpp)
add_executable(EEE EEE.cpp)
add_executable(FFF FFF.cpp)
add_executable(clear_in clear_in.cpp)
add_executable(comp comp.cpp)


add_executable(Main projects/Main.cpp)